--- a/static/index.html
+++ b/static/index.html
@@ -8,8 +8,8 @@
   <h1>Hello World</h1>
 
   <div>
-    <input type="number" id="a" name="a" placeholder="First number">
-    <input type="number" id="b" name="b" placeholder="Second number">
+    <input type="number" id="a" placeholder="First number">
+    <input type="number" id="b" placeholder="Second number">
     <select id="operation">
       <option value="add">Add</option>
       <option value="subtract">Subtract</option>
@@ -22,31 +22,38 @@
   <div id="result" style="margin-top:1em; font-weight:bold;"></div>
 
   <script>
-    document.getElementById("calculate").addEventListener("click", () => {
+    document.getElementById("calculate").addEventListener("click", async () => {
       const a = parseFloat(document.getElementById("a").value);
       const b = parseFloat(document.getElementById("b").value);
       const op = document.getElementById("operation").value;
+      const type = op.charAt(0).toUpperCase() + op.slice(1);
 
-      fetch(`/${op}`, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ a, b })
-      })
-      .then(response => {
-        if (!response.ok) throw new Error(`Error ${response.status}`);
-        return response.json();
-      })
-      .then(data => {
-        // ← HERE is the key change:
-        // instead of doing `innerText = data`, we pull out `data.result`
+      // grab our stored JWT
+      const token = localStorage.getItem("jwt_token");
+      if (!token) {
+        document.getElementById("result").innerText = "Not logged in";
+        return;
+      }
+
+      try {
+        const resp = await fetch("/calculations", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${token}`
+          },
+          body: JSON.stringify({ type, a, b }),
+        });
+
+        if (!resp.ok) {
+          throw new Error(`Error ${resp.status}`);
+        }
+        const data = await resp.json();
         document.getElementById("result").innerText = data.result;
-      })
-      .catch(err => {
+      } catch (err) {
         document.getElementById("result").innerText = err.message;
-      });
+      }
     });
   </script>
-  <script src="/static/calculator.js"></script>
-
 </body>
 </html>
